Bid Card Distortion FIXED | view more bids hover effect | empty bid all modal displays a message

--- a/client/src/components/Main/Home/ProductCard/BidsAllModal/BidsAllModal.css
+++ b/client/src/components/Main/Home/ProductCard/BidsAllModal/BidsAllModal.css
@@ -26,3 +26,16 @@
     font-size: 1.1rem !important;
     color: rgba(var(--primary-dark), 0.8) !important;
 }
+
+.bidsAllModal__noBids {
+    height: 70%;
+    display: grid;
+    place-items: center;
+}
+
+.bidsAllModal__noBids h3 {
+    font-weight: 500;
+    font-size: 1rem;
+    color: rgba(var(--primary-light), 0.6);
+    text-align: center;
+}
