--- a/client/src/components/Main/Home/ProductCard/ProductCard.css
+++ b/client/src/components/Main/Home/ProductCard/ProductCard.css
@@ -200,7 +200,8 @@
     box-sizing: border-box;
 }
 
-.productCard__bidMore:hover .MuiAvatar-colorDefault {
+.productCard__bidMore:hover .MuiAvatar-colorDefault,
+.productCard__bidMore:hover .avatar {
     background-color: rgba(var(--secondary-light), 1);
     color: rgba(var(--primary-light), 1);
     font-weight: 500;
